--- a/config.json
+++ b/config.json
@@ -1,11 +1,10 @@
 {
-    "DISCORD_TOKEN": "",
-    "client_id": "",
+    "DISCORD_TOKEN": "OTI1MTcxOTI5MjczNDc1MTAy.YcpPgA.vk2TODQZ0lI6IlsRhFl33vx5nxw",
+    "client_id": "925171929273475102",
     "guild_id": "",
     "SPOT": false,
     "OWNERS": [
-        516805045199699969,
-        642097099802017793
+        925171929273475102
     ],
     "STARTUP_COGS": [
         "general"
