--- a/config.json
+++ b/config.json
@@ -1,13 +1,14 @@
 {
     "DISCORD_TOKEN": "OTI1MTcxOTI5MjczNDc1MTAy.YcpPgA.vk2TODQZ0lI6IlsRhFl33vx5nxw",
     "client_id": "925171929273475102",
-    "guild_id": "",
+    "guild_id": "925312162568736769",
     "SPOT": false,
     "OWNERS": [
         925171929273475102
     ],
     "STARTUP_COGS": [
-        "general"
+        "general",
+        "fun"
     ],
 
     "MODERATOR_ROLE": "moderator",
