--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
-    "discord.js": "^13.4.0"
+    "discord.js": "^13.5.0",
+    "https": "^1.0.0"
   },
   "name": "BrainyBot2.0",
   "version": "1.0.0",
