changes to make the branch auto merged

--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
-    "discord.js": "^13.3.1",
-    "markdown-js": "^0.0.4",
-    "mustache": "^4.2.0"
+    "discord.js": "^13.3.1"
   }
 }
