--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "DISCORD_TOKEN": "",
     "client_id": "",
     "guild_id": "",
-    "ERROR_LOGS_CHANNEL":"",
+    "ERROR_LOGS_CHANNEL":789619219666960384,
     "SPOT": false,
     "DEFAULT_PREFIX":"$",
     "COMMANDS_STARTUP_COGS":[],
