--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@discordjs/voice": "^0.7.5",
     "@iamtraction/google-translate": "^1.1.2",
     "ascii-table": "^0.0.9",
-    "chalk": "^5.0.0",
     "common-tags": "^1.8.2",
     "config.json": "^0.0.4",
     "cpu-stat": "^2.0.1",
@@ -30,7 +29,9 @@
     "dotenv": "^10.0.0",
     "enmap": "^5.8.7",
     "moment": "^2.29.1",
+    "chalk":"^4.1.0",
     "os": "^0.1.2",
+    "os-utils": "^0.0.14",
     "path": "^0.12.7",
     "superagent": "^6.1.0",
     "twemoji-parser": "^13.1.0",
@@ -39,6 +40,5 @@
   },
   "devDependencies": {
     "eslint": "^8.5.0"
-  },
-  "type": "module"
+  }
 }
