--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "DISCORD_TOKEN": "ODA2Mjc3NzcwOTM4MDI0MDA3.YBnGsA.cbGg_allvND-iSAOHsAsXfg8BfI",
-    "client_id": "806277770938024007",
-    "guild_id": "806282165406138378",
+    "DISCORD_TOKEN": "",
+    "client_id": "",
+    "guild_id": "",
     "SPOT": false,
     "OWNERS": [
         925171929273475102
