--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "DISCORD_TOKEN": "",
-    "client_id": "",
-    "guild_id": "",
+    "DISCORD_TOKEN": "OTI2MDk1Nzc0ODQzMDE1MjE5.Yc2r5g.oEZ1ZksP_mGpfpXI1vK14TJH9ts",
+    "client_id": "926095774843015219",
+    "guild_id": "691082098978848818",
     "ERROR_LOGS_CHANNEL": "812446119753547786",
     "SPOT": true,
     "DEFAULT_PREFIX": "$",
