--- a/config.json
+++ b/config.json
@@ -1,18 +1,9 @@
 {
   "DISCORD_TOKEN": "",
-  "client_id": "",
-  "guild_id": "",
-  "ERROR_LOGS_CHANNEL": "812446119753547786",
+  "ERROR_LOGS_CHANNEL": "789619219666960384",
   "SPOT": true,
-  "DEFAULT_PREFIX": "$",
   "COMMANDS_STARTUP_COGS": [],
-  "SLASH_COMMANDS_STARTUP_COGS": [
-    "general",
-    "mods",
-    "fun",
-    "owner",
-    "techpoint"
-  ],
+  "SLASH_COMMANDS_STARTUP_COGS": ["fun"],
   "OWNERS": ["642097099802017793"],
   "MODERATOR_ROLE": "moderator",
   "COMANAGERS_IDS": ["64209709980201732793"],
