adding poll command

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "superagent": "^6.1.0",
     "twemoji-parser": "^13.1.0",
     "util": "^0.12.4",
+    "uuid": "^8.3.2",
     "weky": "^3.1.8"
   },
   "devDependencies": {
