Fix eslint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,10 @@
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "rules": {},
-  "eslint linebreak-style": [
-    "error", 
-    "windows"
-  ]
+  "rules": {
+    "linebreak-style": [
+      "error", 
+      "windows"
+    ]
+  }
 }
