Exclude config.json from repo

--- a/config.json.template
+++ b/config.json.template
@@ -1,6 +1,6 @@
 {
-  "DISCORD_TOKEN": "",
-  "ERROR_LOGS_CHANNEL": "949688247452323840",
+  "DISCORD_TOKEN": "TOKEN_GOES_HERE",
+  "ERROR_LOGS_CHANNEL": "ERROR_LOGS_CHANNEL_ID_GOES_HERE",
   "SPOT": true,
   "COMMANDS_STARTUP_COGS": [],
   "SLASH_COMMANDS_STARTUP_COGS": [
@@ -11,12 +11,12 @@
     "owner",
     "techpoint"
   ],
-  "OWNERS": ["642097099802017793"],
+  "OWNERS": [],
   "MODERATOR_ROLE": "moderator",
-  "COMANAGERS_IDS": ["64209709980201732793"],
+  "COMANAGERS_IDS": [],
   "GITHUB_TOKEN": "",
   "REPOSITORY_NAME": "",
   "BRANCH_NAME": "",
   "REPOSITORY_OWNER": "",
-  "TECHPOINT_CHAT_CHANNEL_ID": "934869478536278056"
+  "TECHPOINT_CHAT_CHANNEL_ID": ""
 }
