--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "GDG Algiers",
   "scripts": {
     "start": "node  --experimental-specifier-resolution=node src/bot.js",
+    "dev": "nodemon src/bot.js",
     "test": "echo \"Error: no test specified\" ",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -26,13 +27,13 @@
     "config.json": "^0.0.1",
     "cpu-stat": "^2.0.1",
     "discord-api-types": "^0.26.0",
-    "discord-emoji": "^2.0.3",
+    "discord-emoji": "^2.0.5",
     "discord-fetch-all": "^3.0.2",
     "discord.js": "^13.6.0",
     "djs-games": "^2.1.10",
     "dotenv": "^10.0.0",
-    "enmap": "^5.8.8",
-    "moment": "^2.29.1",
+    "enmap": "^5.8.13",
+    "moment": "^2.29.2",
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
     "path": "^0.12.7",
@@ -45,8 +46,9 @@
     "weky": "^2.0.9"
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-google": "^0.14.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
