--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "os": "^0.1.2",
     "os-utils": "^0.0.14",
     "path": "^0.12.7",
+    "pexels": "^1.4.0",
     "simple-json-db": "^2.0.0",
     "string-progressbar": "^1.0.4",
     "superagent": "^6.1.0",
